test/Fail/Issue3014.err
Issue3014.agda:9.14-19: error: [SplitOnNonVariable]
Cannot pattern match because the (refined) argument true is not a
variable.
when checking that the pattern false has type Bool
